--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -68,7 +68,13 @@ input, textarea {
   color: #f44336; }
 
 .show-table {
-  padding-top: 100px; }
+  padding-top: 59px; }
+
+.ui.modal > .content {
+  margin-top: 50px; }
+
+.view-members-modal button:first-child {
+  display: none; }
 
 .header {
   background-color: #fff;
