--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -45,15 +45,49 @@ form {
     padding: 5px;
     margin: 0px 5%; }
 
+.edit-form {
+  padding-top: 0px;
+  padding-top: 0px;
+  margin: 0px 38px; }
+  .edit-form .ui.button {
+    position: relative;
+    top: 15px;
+    left: 15px; }
+
 label {
   display: block;
-  padding-bottom: 5px; }
+  margin: 0 0 .28571429rem 0;
+  color: rgba(0, 0, 0, 0.87);
+  font-size: .92857143em;
+  font-weight: 700;
+  text-transform: none; }
 
 input, textarea {
   width: 90%;
   padding: 5px;
   margin: 0px 5%;
-  font-size: 16px; }
+  font-size: 16px;
+  margin: 0;
+  max-width: 100%;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto;
+  outline: 0;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  text-align: left;
+  line-height: 1.21428571em;
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+  padding: .67857143em 1em;
+  background: #fff;
+  border: 1px solid rgba(34, 36, 38, 0.15);
+  color: rgba(0, 0, 0, 0.87);
+  border-radius: .28571429rem;
+  -webkit-transition: border-color .1s ease,-webkit-box-shadow .1s ease;
+  transition: border-color .1s ease,-webkit-box-shadow .1s ease;
+  transition: box-shadow .1s ease,border-color .1s ease;
+  transition: box-shadow .1s ease,border-color .1s ease,-webkit-box-shadow .1s ease;
+  -webkit-box-shadow: none;
+  box-shadow: none; }
 
 .has-error {
   border: 1px solid #f44336; }
@@ -68,7 +102,7 @@ input, textarea {
   color: #f44336; }
 
 .show-table {
-  padding-top: 59px; }
+  padding-top: 100px; }
 
 .ui.modal > .content {
   margin-top: 50px; }
@@ -82,6 +116,15 @@ input, textarea {
 .add-group {
   margin-right: 20px !important;
   margin-top: 15px !important; }
+
+.button-alignment {
+  float: right; }
+
+.anchor-tag {
+  margin: 8px 15px; }
+
+.ui.table td i.large.icon, .ui.table td i.large.icons {
+  cursor: pointer; }
 
 .header {
   background-color: #fff;
