--- a/client/src/scss/form.scss
+++ b/client/src/scss/form.scss
@@ -106,3 +106,7 @@ input, textarea {
     cursor: pointer;
   }
 }
+.page-title{
+  text-align: left !important;
+  font-weight: bold !important;
+}
